--- a/new/index.html
+++ b/new/index.html
@@ -13,26 +13,18 @@
 	    <meta name="author" content="IIT Roorkee MotorSports | IIT RMS">
 
 	    <link rel="icon" href="">
-<<<<<<< HEAD
-=======
 	    <link href="https://fonts.googleapis.com/css?family=Allerta|Lato:300,400,700,900" rel="stylesheet">
->>>>>>> header
-	    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
 	    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	    <link href="src/css/bootstrap.min.css" rel="stylesheet">
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
+	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
-	    <link href="src/css/index.css" rel="stylesheet">
-	    <link href="src/css/indexTab.css" rel="stylesheet">
+	    <link href="src/css/index1.css" rel="stylesheet">
+	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob.css" rel="stylesheet">
 	</head>
-	<body>
-<<<<<<< HEAD
-		yui
-
-=======
 		<div class="container-fluid mainGIF">
 			
 		</div>
@@ -63,10 +55,18 @@
 		</nav>
 		
 		<div class="container-fluid">
-			<p class="aboutUsHeading navbar-right">ABOUT US</p><br>
-			<p class="aboutUsTextMain ">IIT Roorkee Motorsports is the Formula Student team of IIT Roorkee which participates in Formula SAE competitions, the largest Engineering Competition in the world, by designing, developing and fabricating an open wheel Formula style Race Car. Our debut competition was the FSAE –Australasia in 2011 and since then the team has improved considerably to being the 1st Ranked Electric team in India as per the FSAE Electric rankings.</p>
+			<div class="row">			
+				<p class="aboutUsHeading navbar-right">ABOUT US</p><br>
+			</div>
+			<div class="row feature-head wow fadeInDown">
+				<p class="aboutUsTextMain text-justify">IIT Roorkee Motorsports is the Formula Student team of IIT Roorkee which participates in Formula SAE competitions, the largest Engineering Competition in the world, by designing, developing and fabricating an open wheel Formula style Race Car. Our debut competition was the FSAE –Australasia in 2011 and since then the team has improved considerably to being the 1st Ranked Electric team in India as per the FSAE Electric rankings.</p>
+			</div>
+			<div class="row">
+				<div class="col-sm-4 col-sm-offset-4 readMoreMainButton">
+					<a> READ MORE</a>
+				</div>
+			</div>
 		</div>
->>>>>>> header
 
 	</body>
 </html>
