--- a/new/index.html
+++ b/new/index.html
@@ -15,21 +15,43 @@
 	    <link rel="icon" href="">
 	    <link href="https://fonts.googleapis.com/css?family=Allerta|Lato:300,400,700,900" rel="stylesheet">
 	    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	    <link href="src/css/bootstrap.min.css" rel="stylesheet">
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
 	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
-	    <link href="src/css/index1.css" rel="stylesheet">
+	    <link href="src/css/index2.css" rel="stylesheet">
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob.css" rel="stylesheet">
 	</head>
+
+	<script>
+		
+		$(document).ready(function() {
+		    $(window).scroll( function(){
+		        $('.hideme').each( function(i){
+		            var bottom_of_object = $(this).position().top + $(this).outerHeight();
+		            var bottom_of_window = $(window).scrollTop() + $(window).height();
+		            if( bottom_of_window > bottom_of_object ){
+		                $(this).animate({'opacity':'1','padding-top':'2.5vh'},700);
+		            }
+		        }); 
+		        $('.navbarAnimate').each( function(i){
+		            var bottom_of_object = $(this).position().top + $(this).outerHeight();
+		            var bottom_of_window = $(window).scrollTop() + $(window).height();
+		            if( bottom_of_window > bottom_of_object ){
+		                $(this).animate({'opacity':'1'},200);
+		            }
+		        }); 
+		    });
+		});
+	</script>
 		<div class="container-fluid mainGIF">
 			
 		</div>
 		
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default navbarAnimate">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -54,19 +76,29 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 		
-		<div class="container-fluid">
-			<div class="row">			
-				<p class="aboutUsHeading navbar-right">ABOUT US</p><br>
+		<div class="container-fluid" >
+			<div class="row mar-b-50">			
+				<p class="aboutUsHeading navbar-right hideme">ABOUT US</p><br>
 			</div>
-			<div class="row feature-head wow fadeInDown">
-				<p class="aboutUsTextMain text-justify">IIT Roorkee Motorsports is the Formula Student team of IIT Roorkee which participates in Formula SAE competitions, the largest Engineering Competition in the world, by designing, developing and fabricating an open wheel Formula style Race Car. Our debut competition was the FSAE –Australasia in 2011 and since then the team has improved considerably to being the 1st Ranked Electric team in India as per the FSAE Electric rankings.</p>
+			<div class="row ">
+				<p class="aboutUsTextMain text-justify hideme">IIT Roorkee Motorsports is the Formula Student team of IIT Roorkee which participates in Formula SAE competitions, the largest Engineering Competition in the world, by designing, developing and fabricating an open wheel Formula style Race Car. Our debut competition was the FSAE –Australasia in 2011 and since then the team has improved considerably to being the 1st Ranked Electric team in India as per the FSAE Electric rankings.</p>
 			</div>
-			<div class="row">
-				<div class="col-sm-4 col-sm-offset-4 readMoreMainButton">
+			<div class="row borderLine" >
+				<div class="col-sm-4 col-sm-offset-4 readMoreMainButton navbarAnimate">
 					<a> READ MORE</a>
 				</div>
 			</div>
-		</div>
+			<div class="row eventDiv">
+				<div class="col-sm-6 rightBorder">
+					FS Germany 2018 
+ 						As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.
 
+				</div>
+				<div class="col-sm-6">
+					
+				</div>
+			</div>
+		</div>
+		<div style="height: 30vh"></div>
 	</body>
 </html>
