event and team update

--- a/new/index.html
+++ b/new/index.html
@@ -21,7 +21,7 @@
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
 	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
-	    <link href="src/css/index2.css" rel="stylesheet">
+	    <link href="src/css/index3.css" rel="stylesheet">
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob.css" rel="stylesheet">
 	</head>
@@ -88,14 +88,17 @@
 					<a> READ MORE</a>
 				</div>
 			</div>
-			<div class="row eventDiv">
-				<div class="col-sm-6 rightBorder">
-					FS Germany 2018 
- 						As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.
+			<div class="row eventDiv borderLine">
+				<div class="col-sm-6 rightBorder eventPad">
+					<p class="eventHeading">UPCOMING EVENT</p>
+					<p class="eventContent " style="margin-bottom: -.5vh;padding-top: 6vh ">FS Germany 2018 </p>
+					<p class="eventContent">As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.</p>
 
 				</div>
-				<div class="col-sm-6">
-					
+				<div class="col-sm-6 eventPad ">
+					<p class="eventHeading">TEAM UPDATES</p>
+					<p class="eventContent eventHeading2">Passive Battery Managment System(BMS) design has been completed. PCB is ready to be sent for Fabrication.</p>
+
 				</div>
 			</div>
 		</div>
