about without animation

--- a/new/about.html
+++ b/new/about.html
@@ -88,7 +88,21 @@
 		</nav>
 		
 		<div class="container-fluid" >
-			
+			<p class="aboutHeading">ABOUT US</p>
+			<div class="row">
+				<div class="col-sm-5">
+					
+				</div>
+				<div class="col-sm-7">
+					<p class="aboutContent text-justify">
+IIT Roorkee Motorsports is a group of inter-disciplinary students from IIT Roorkee .We participate in the world’s largest Inter–Collegiate Engineering competition conducted by Formula Society of Automotive Engineers, FSAE at 11 locations globally.  
+The competition requires designing, developing and fabricating a formula style open wheeled race car which than further needs to be sold to a hypothetical Firm thus considering the business and marketing aspects of the car and entire project too. The entire process is completed by the students only. The competition consists of static and dynamic events which not only judges the car on the design and engineering basis but also on the business aspects of the projects. 
+The team made its debut in 2011 by participating in FSAE-Australasia held in Melbourne, Australia and currently the team is set to participate in Formula Student Germany, 2018 which will be the team’s 5th Project. 
+These competitions present students with the unique opportunity to develop their skills in technical designing, manufacturing, research work, team management, communication and business operations such as budgeting and market research in a real world environment. The unique combination of real world pressures to meet the deadlines, to design and fabricate a formula style race car and to make it compete at the international level requires a great deal of skills and helps the students build an overall personality while working under great deal of pressure. These skills are very important in the current corporate world and hence the formula students are highly sought after across the corporate sectors especially in engineering mobility industry. 
+					</p>
+				</div>
+			</div>
+		</div>
 		<footer class="footer">
 			<div class="container-fluid">
 				<div class="row">
