--- a/new/index.html
+++ b/new/index.html
@@ -73,17 +73,17 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#"><img src="src/img/logo.gif" class="logoHeader"></a>
+		      <a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
 		    </div>
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		        <ul class="nav navbar-nav navbar-right headerLink">
-			        <li class="active"><a href="#">HOME</a></li>
-			        <li><a href="#">ABOUT US</a></li>
-			        <li><a href="#">OUR PROJECT</a></li>
-			        <li><a href="#">TEAM</a></li>
-			        <li><a href="#">GALLERY</a></li>
-			        <li><a href="#">SPONSORS</a></li>
-			        <li><a href="#">CONTACT US</a></li>
+			        <li class="active"><a href="index.html">HOME</a></li>
+			        <li><a href="about.html">ABOUT US</a></li>
+			        <li><a href="project.html">OUR PROJECT</a></li>
+			        <li><a href="team.html">TEAM</a></li>
+			        <li><a href="gallery.html">GALLERY</a></li>
+			        <li><a href="sponsors.html">SPONSORS</a></li>
+			        <li><a href="#contact">CONTACT US</a></li>
 			    </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
