--- a/new/index.html
+++ b/new/index.html
@@ -21,7 +21,7 @@
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
 	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
-	    <link href="src/css/index8.css" rel="stylesheet">
+	    <link href="src/css/index9.css" rel="stylesheet">
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
 	</head>
@@ -79,7 +79,7 @@
 		        <ul class="nav navbar-nav navbar-right headerLink">
 			        <li class="active"><a href="index.html">HOME</a></li>
 			        <li><a href="about.html">ABOUT US</a></li>
-			        <li><a href="project.html">OUR PROJECT</a></li>
+			        <li><a href="project.html">CARS</a></li>
 			        <li><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li><a href="sponsors.html">SPONSORS</a></li>
@@ -103,7 +103,7 @@
 			</div>
 			<div class="row eventDiv borderLine">
 				<div class="col-sm-6 rightBorder eventPad">
-					<p class="eventHeading navbarAnimate">UPCOMING EVENT</p>
+					<p class="eventHeading navbarAnimate">UPCOMING EVENTS</p>
 					<p class="eventContent eventContentHeading navbarAnimate" >FS Germany 2018 </p>
 					<p class="eventContent navbarAnimate text-justify">As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.</p>
 
