--- a/new/about.html
+++ b/new/about.html
@@ -21,6 +21,7 @@
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
 	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
+	    <script src="src/js/animation.js"></script>
 	    <link href="src/css/index9.css" rel="stylesheet">
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
@@ -49,7 +50,7 @@
 	</script>
 		
 		
-		<div class="container-fluid sideIcons" style="">
+		<!-- <div class="container-fluid sideIcons" style="">
 			        <div class="row">
 			            <div class="col-lg-12 col-xs-12 ">
 			                <ul class="" style="list-style-type: none;font-size: 2em;color:#fff;width: 100px;">
@@ -60,7 +61,7 @@
 			                </ul>
 			            </div>
 			        </div>
-			    </div>
+			    </div> -->
 
 		<nav class="navbar navbar-default navbarAnimate">
 		  <div class="container-fluid">
@@ -81,7 +82,7 @@
 			        <li><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li><a href="sponsors.html">SPONSORS</a></li>
-			        <li><a href="#contact">CONTACT US</a></li>
+			        <li><a href="#contact"  class="scrollTo">CONTACT US</a></li>
 			    </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -122,7 +123,6 @@ These competitions present students with the unique opportunity to develop their
                 	<div class="col-sm-3">
                 		<div class="row">
 						 	<i class="fa fa-facebook footerSocialIcon" ></i>
-						 	<i class="fa fa-google-plus footerSocialIcon"></i>
 						 	<i class="fa fa-linkedin footerSocialIcon"></i>
 						 	<i class="fa fa-twitter  footerSocialIcon"></i>
 						 	<i class="fa fa-instagram footerSocialIcon"></i>
@@ -134,5 +134,14 @@ These competitions present students with the unique opportunity to develop their
 				</div>
 			</div>
 		</footer>
+		<script>
+			$(".scrollTo").on('click', function(e) {
+			     e.preventDefault();
+			     var target = $(this).attr('href');
+			     $('html, body').animate({
+			       scrollTop: ($(target).offset().top)
+			     }, 700);
+			  });
+		</script>
 	</body>
 </html>
