--- a/new/project.html
+++ b/new/project.html
@@ -29,14 +29,19 @@
  -->	</head>
 	    <script src="src/js/animation.js"></script>
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
-	    <link href="src/css/indexMob2.css" rel="stylesheet">
-	    <link href="themes/2/js-image-slider1.css" rel="stylesheet" type="text/css" />
-    <script src="themes/2/js-image-slider.js" type="text/javascript"></script>
     <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
 	    <!--  <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
     <script src="themes/5/js-image-slider.js" type="text/javascript"></script>
     <link href="src/css/generic1.css" rel="stylesheet" type="text/css" />
  -->	</head>
+	    <link href="src/css/index12.css" rel="stylesheet">
+	    <script src="src/js/animation.js"></script>
+	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
+	    <link href="src/css/indexMob2.css" rel="stylesheet">
+	     <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
+    <script src="themes/5/js-image-slider.js" type="text/javascript"></script>
+    <link href="src/css/generic1.css" rel="stylesheet" type="text/css" />
+	</head>
 
 	<script>
 		
@@ -120,6 +125,7 @@
     </div>
 	
 		<!-- <div class="container-fluid mainGIF display">
+	
 			<div id="sliderFrame">
 		        <div id="slider">
 		            <a href=""><img src="src/img/gallery/img1.jpg"  /></a>
