--- a/new/project.html
+++ b/new/project.html
@@ -25,7 +25,9 @@
 	    <script src="src/js/animation.js"></script>
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
-	    
+	     <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
+    <script src="themes/5/js-image-slider.js" type="text/javascript"></script>
+    <link href="src/css/generic1.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<script>
@@ -49,22 +51,6 @@
 		    });
 		});
 	</script>
-	
-		
-		
-		<!-- <div class="container-fluid sideIcons" style="">
-			        <div class="row">
-			            <div class="col-lg-12 col-xs-12 ">
-			                <ul class="" style="list-style-type: none;font-size: 2em;color:#fff;width: 100px;">
-			                    <li class="wow flipInY" data-wow-duration="2s" data-wow-delay=".1s"><a href="https://www.facebook.com/iitrms.in/"><i class="fa fa-facebook fb" ></i></a></li>
-			                    <li class="wow flipInY" data-wow-duration="2s" data-wow-delay=".2s"><a href="https://plus.google.com/118206364906217576373/posts"><i class="fa fa-google-plus google" > </i></a></li>
-			                    <li class="wow flipInY" data-wow-duration="2s" data-wow-delay=".4s"><a href="https://in.linkedin.com/in/iitroorkeemotorsportsteam"><i class="fa fa-linkedin linkedin" ></i></a></li>
-			                    <li class="wow flipInY" data-wow-duration="2s" data-wow-delay=".5s"><a href="https://twitter.com/iitrms_iitr"><i class="fa fa-twitter twitter" ></i></a></li>
-			                </ul>
-			            </div>
-			        </div>
-			    </div> -->
-
 		<nav class="navbar navbar-default navbarAnimate">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
@@ -89,33 +75,26 @@
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-		
-		<div class="container-fluid" >
-			<div class="row mar-b-50">			
-				<p class="aboutUsHeading navbar-right hideme">ABOUT US</p><br>
-			</div>
-			<div class="row ">
-				<p class="aboutUsTextMain text-justify hideme">IIT Roorkee Motorsports is the Formula Student team of IIT Roorkee which participates in Formula SAE competitions, the largest Engineering Competition in the world, by designing, developing and fabricating an open wheel Formula style Race Car. Our debut competition was the FSAE –Australasia in 2011 and since then the team has improved considerably to being the 1st Ranked Electric team in India as per the FSAE Electric rankings.</p>
-			</div>
-			<div class="row borderLine" >
-				<div class="col-sm-4 col-sm-offset-4 readMoreMainButton navbarAnimate ">
-					<a> READ MORE</a>
-				</div>
-			</div>
-			<div class="row eventDiv borderLine">
-				<div class="col-sm-6 rightBorder eventPad">
-					<p class="eventHeading navbarAnimate">UPCOMING EVENTS</p>
-					<p class="eventContent eventContentHeading navbarAnimate" >FS Germany 2018 </p>
-					<p class="eventContent navbarAnimate text-justify">As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.</p>
-
-				</div>
-				<div class="col-sm-6 eventPad ">
-					<p class="eventHeading navbarAnimate">TEAM UPDATES</p>
-					<p class="eventContent eventHeading2 navbarAnimate text-justify">Passive Battery Managment System(BMS) design has been completed. PCB is ready to be sent for Fabrication.</p>
-
-				</div>
-			</div>
+	
+		<div class="container-fluid mainGIF display">
+			<div id="sliderFrame">
+		        <div id="slider">
+		            <a href=""><img src="src/img/gallery/img1.jpg"  /></a>
+		            <a class="lazyImage" href="src/img/gallery/img2.jpg"></a>
+		            <a href=""><b data-src="src/img/gallery/img3.jpg" ></b></a>
+		            <a class="lazyImage" href="src/img/gallery/img4.jpg" ></a>
+		        </div>
+		                
+		        <div id="thumbs">
+		            <a><div class="thumb">2017</div></a>
+		            <a><div class="thumb">2015</div></a>
+		            <a><div class="thumb">2013</div></a>
+		            <a><div class="thumb">2011</div></a>
+		        </div>
+		    </div>
 		</div>
+		
+		
 
 		<footer class="footer" id="contact">
 			<div class="container-fluid">
