--- a/new/sponsors.html
+++ b/new/sponsors.html
@@ -11,8 +11,7 @@
 	    <meta name="keywords" content="">
 
 	    <meta name="author" content="IIT Roorkee MotorSports | IIT RMS">
-
-	    <link rel="icon" href="">
+	    <link rel="icon" href="src/img/logo.ico">
 	    <link href="https://fonts.googleapis.com/css?family=Allerta|Lato:300,400,700,900" rel="stylesheet">
 	    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
