--- a/new/team.html
+++ b/new/team.html
@@ -12,7 +12,7 @@
 
 	    <meta name="author" content="IIT Roorkee MotorSports | IIT RMS">
 
-	    <link rel="icon" href="">
+	    <link rel="icon" href="src/img/logo.ico">
 	    <link href="https://fonts.googleapis.com/css?family=Allerta|Lato:300,400,700,900" rel="stylesheet">
 	    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -65,9 +65,9 @@
 			        <li><a href="index.html">HOME</a></li>
 			        <li><a href="about.html">ABOUT US</a></li>
 			        <li><a href="project.html">OUR PROJECT</a></li>
-			        <li><a href="team.html">TEAM</a></li>
+			        <li class="active"><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
-			        <li  class="active"><a href="sponsors.html">SPONSORS</a></li>
+			        <li ><a href="sponsors.html">SPONSORS</a></li>
 			        <li><a href="#contact" class="scrollTo">CONTACT US</a></li>
 			    </ul>
 		    </div><!-- /.navbar-collapse -->
