--- a/new/index.html
+++ b/new/index.html
@@ -65,6 +65,40 @@ nav.shrink .navbar-toggle {
 	    <link href="themes/4/js-image-slider1.css" rel="stylesheet" type="text/css" />
     <script src="themes/4/js-image-slider.js" type="text/javascript"></script>
     <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
+	     <style>
+
+      
+
+  /* Note: Try to remove the following lines to see the effect of CSS positioning */
+  .affix {
+  	  padding-bottom: 15px;
+  	  top: 0;
+      width: 100%;
+      z-index: 9999 !important;
+
+      nav.navbar.shrink {
+  min-height: 35px;
+}
+
+
+
+nav.shrink a {
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+  font-size: 10px;
+}
+
+nav.shrink .navbar-brand {
+  font-size: 10px;
+}
+
+nav.shrink .navbar-toggle {
+  padding: 2px 2px;
+  margin: 8px 0 8px 0;
+}
+ 
+
+  </style>
 	</head>
 
 	<script>
