main page slider

--- a/new/index.html
+++ b/new/index.html
@@ -62,6 +62,9 @@ nav.shrink .navbar-toggle {
  
 
   </style>
+	    <link href="themes/4/js-image-slider1.css" rel="stylesheet" type="text/css" />
+    <script src="themes/4/js-image-slider.js" type="text/javascript"></script>
+    <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
 	</head>
 
 	<script>
