--- a/new/project.html
+++ b/new/project.html
@@ -30,10 +30,14 @@
 	    <script src="src/js/animation.js"></script>
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
-	     <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
+	    <link href="themes/2/js-image-slider1.css" rel="stylesheet" type="text/css" />
+    <script src="themes/2/js-image-slider.js" type="text/javascript"></script>
+    <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
+	    <!--  <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
     <script src="themes/5/js-image-slider.js" type="text/javascript"></script>
     <link href="src/css/generic1.css" rel="stylesheet" type="text/css" />
-	</head>
+ -->	</head>
+
 	<script>
 		
 		$(document).ready(function() {
@@ -79,8 +83,6 @@
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-<<<<<<< HEAD
-
 	<div id="sliderFrame" style="margin-top: 5vh;margin-bottom: 5vh">
         <div id="slider">
             <a href="http://www.menucool.com/jquery-slider" target="_blank">
@@ -118,10 +120,6 @@
     </div>
 	
 		<!-- <div class="container-fluid mainGIF display">
-=======
-	
-		<div class="container-fluid mainGIF display">
->>>>>>> our project
 			<div id="sliderFrame">
 		        <div id="slider">
 		            <a href=""><img src="src/img/gallery/img1.jpg"  /></a>
@@ -138,11 +136,7 @@
 		        </div>
 		    </div>
 		</div>
-<<<<<<< HEAD
 		 -->
-=======
-		
->>>>>>> our project
 		
 
 		<footer class="footer" id="contact">
