--- a/new/index.html
+++ b/new/index.html
@@ -25,7 +25,9 @@
 	    <script src="src/js/animation.js"></script>
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
-	    
+	    <link href="themes/4/js-image-slider1.css" rel="stylesheet" type="text/css" />
+    <script src="themes/4/js-image-slider.js" type="text/javascript"></script>
+    <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
 	</head>
 
 	<script>
@@ -50,8 +52,26 @@
 		});
 	</script>
 	
-		
-		
+	<div id="sliderFrame">
+        <div id="slider">
+            <img src="src/img/gallery/img1.jpg" />
+            <img src="src/img/gallery/img2.jpg" />
+            <img src="src/img/gallery/img3.jpg" />
+            <img src="src/img/gallery/img4.jpg" />
+        </div>
+        <!-- <div class="group1-Wrapper">
+            <a onclick="imageSlider.previous()" class="group1-Prev"></a>
+            <a onclick="imageSlider.next()" class="group1-Next"></a>
+        </div>
+        <div style="text-align:center;padding:20px;z-index:20;">
+            <a onclick="imageSlider.previous()" class="group2-Prev"></a>
+            <a id='auto' onclick="switchAutoAdvance()"></a>
+            <a onclick="imageSlider.next()" class="group2-Next"></a>
+        </div> -->
+    </div>
+    <div class="">
+    	<p class="welcomeToMotorsport">WELCOME TO MOTORSPORT</p>
+    </div>
 		<!-- <div class="container-fluid sideIcons" style="">
 			        <div class="row">
 			            <div class="col-lg-12 col-xs-12 ">
