--- a/new/project.html
+++ b/new/project.html
@@ -25,10 +25,13 @@
 	    <script src="src/js/animation.js"></script>
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
-	     <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
+	    <link href="themes/2/js-image-slider1.css" rel="stylesheet" type="text/css" />
+    <script src="themes/2/js-image-slider.js" type="text/javascript"></script>
+    <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
+	    <!--  <link href="themes/5/js-image-slider1.css" rel="stylesheet" type="text/css" />
     <script src="themes/5/js-image-slider.js" type="text/javascript"></script>
     <link href="src/css/generic1.css" rel="stylesheet" type="text/css" />
-	</head>
+ -->	</head>
 
 	<script>
 		
@@ -75,8 +78,44 @@
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
+
+	<div id="sliderFrame" style="margin-top: 5vh;margin-bottom: 5vh">
+        <div id="slider">
+            <a href="http://www.menucool.com/jquery-slider" target="_blank">
+                <img src="src/img/gallery/img1.jpg"  />
+            </a>
+            <a class="lazyImage" href="src/img/gallery/img2.jpg" title=""></a>
+            <a href="http://www.menucool.com/javascript-image-slider"><b data-src="src/img/gallery/img3.jpg"></b></a>
+            <a class="lazyImage" href="src/img/gallery/img4.jpg" title=""></a>
+        </div>
+        <!--thumbnails-->
+        <div id="thumbs">
+            <div class="thumb">
+                <div class="frame"><img src="src/img/gallery/img1.jpg" /></div>
+                <div class="thumb-content"><p>CAR 2017</p>Thumbnails allows any HTML content</div>
+                <div style="clear:both;"></div>
+            </div>
+            <div class="thumb">
+                <div class="frame"><img src="src/img/gallery/img2.jpg" /></div>
+                <div class="thumb-content"><p>Car 2015</p>Thumbnail style is customizable</div>
+                <div style="clear:both;"></div>
+            </div>
+            <div class="thumb">
+                <div class="frame"><img src="src/img/gallery/img3.jpg" /></div>
+                <div class="thumb-content"><p>Car 2013</p>Just a CSS tweak.</div>
+                <div style="clear:both;"></div>
+            </div>
+            <div class="thumb">
+                <div class="frame"><img src="src/img/gallery/img4.jpg" /></div>
+                <div class="thumb-content"><p>Car 2011</p>Built-in functions for the thumbnails</div>
+                <div style="clear:both;"></div>
+            </div>
+        </div>
+        <!--clear above float:left elements. It is required if above #slider is styled as float:left. -->
+        <div style="clear:both;height:0;"></div>
+    </div>
 	
-		<div class="container-fluid mainGIF display">
+		<!-- <div class="container-fluid mainGIF display">
 			<div id="sliderFrame">
 		        <div id="slider">
 		            <a href=""><img src="src/img/gallery/img1.jpg"  /></a>
@@ -93,7 +132,7 @@
 		        </div>
 		    </div>
 		</div>
-		
+		 -->
 		
 
 		<footer class="footer" id="contact">
