--- a/new/project.html
+++ b/new/project.html
@@ -21,7 +21,7 @@
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
 	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
-	    <link href="src/css/index10.css" rel="stylesheet">
+	    <link href="src/css/index12.css" rel="stylesheet">
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
 	    <link href="themes/2/js-image-slider1.css" rel="stylesheet" type="text/css" />
     <script src="themes/2/js-image-slider.js" type="text/javascript"></script>
@@ -64,9 +64,9 @@
 		    </div>
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		        <ul class="nav navbar-nav navbar-right headerLink">
-			        <li class="active"><a href="index.html">HOME</a></li>
+			        <li><a href="index.html">HOME</a></li>
 			        <li><a href="about.html">ABOUT US</a></li>
-			        <li><a href="project.html">CARS</a></li>
+			        <li class="active"><a href="project.html">CARS</a></li>
 			        <li><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li><a href="sponsors.html">SPONSORS</a></li>
