--- a/new/index.html
+++ b/new/index.html
@@ -106,8 +106,8 @@
 		      </button>
 		      <a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
 		    </div>
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		        <ul class="nav navbar-nav navbar-right headerLink">
+		    <div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
+		        <ul class="nav navbar-nav navbar-right  headerLink">
 			        <li class="active"><a href="index.html">HOME</a></li>
 			        <li><a href="about.html">ABOUT US</a></li>
 			        <li><a href="project.html">CARS</a></li>
