--- a/new/sponsors.html
+++ b/new/sponsors.html
@@ -59,7 +59,7 @@
 		      <a class="navbar-brand" href="#"><img src="src/img/logo.gif" class="logoHeader"></a>
 		    </div>
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		        <ul class="nav navbar-nav navbar-right headerLink">
+		        <ul class="nav navbar-nav navbar-right headerLink ">
 			        <li><a href="index.html">HOME</a></li>
 			        <li><a href="about.html">ABOUT US</a></li>
 			        <li><a href="project.html">OUR PROJECT</a></li>
@@ -134,7 +134,7 @@
 		    	<div role="tabpanel" class="tab-pane" id="old">	
 		    		<div class="row" style="margin-top: 5vh;margin-bottom: 15vh">
 						<div class="col-sm-11 col-sm-offset-1">
-							<h1 style="text-align: center;">GOLD SPONSORS</h1>
+							<h1  class="goldspons">GOLD SPONSORS</h1>
 							<div class="row">
 								<div class="col-sm-3">
 									<div class="hover08 column">
@@ -166,7 +166,7 @@
 								</div>
 							</div>
 
-							<h1 style="text-align: center;">SILVER SPONSORS</h1>
+							<h1 class="goldspons">SILVER SPONSORS</h1>
 							<div class="row">
 								<div class="col-sm-3">
 									<div class="hover08 column">
@@ -198,7 +198,7 @@
 								</div>
 							</div>
 
-							<h1 style="text-align: center;">BRONZE SPONSORS</h1>
+							<h1 class="goldspons">BRONZE SPONSORS</h1>
 							<div class="row">
 								<div class="col-sm-3">
 									<div class="hover08 column">
@@ -224,14 +224,14 @@
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/tidc.png"  class="sponsorsImage" /></figure>
+										    <figure><img src="src/img/sponsors/enap.jpg"  class="sponsorsImage" /></figure>
 									    </div>
 									</div>
 								</div>
-								<div class="col-sm-3">
+								<div class="col-sm-4 col-sm-offset-4">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/enap.jpg"  class="sponsorsImage" /></figure>
+										    <figure><img src="src/img/sponsors/ae.jpg"  class="sponsorsImage ae"/></figure>
 									    </div>
 									</div>
 								</div>
