--- a/new/team.html
+++ b/new/team.html
@@ -22,7 +22,7 @@
 	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
 	    <script src="src/js/animation.js"></script>
-	    <link href="src/css/index10.css" rel="stylesheet">
+	    <link href="src/css/index12.css" rel="stylesheet">
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
 	</head>
@@ -64,7 +64,7 @@
 		        <ul class="nav navbar-nav navbar-right headerLink">
 			        <li><a href="index.html">HOME</a></li>
 			        <li><a href="about.html">ABOUT US</a></li>
-			        <li><a href="project.html">OUR PROJECT</a></li>
+			        <li><a href="project.html">CARS</a></li>
 			        <li class="active"><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li ><a href="sponsors.html">SPONSORS</a></li>
