--- a/new/project.html
+++ b/new/project.html
@@ -77,12 +77,10 @@
 		</nav>
 	<div id="sliderFrame" style="margin-top: 5vh;margin-bottom: 5vh">
         <div id="slider">
-            <a href="http://www.menucool.com/jquery-slider" target="_blank">
-                <img src="src/img/gallery/img1.jpg"  />
-            </a>
-            <a class="lazyImage" href="src/img/gallery/img2.jpg" title=""></a>
-            <a href="http://www.menucool.com/javascript-image-slider"><b data-src="src/img/gallery/img3.jpg"></b></a>
-            <a class="lazyImage" href="src/img/gallery/img4.jpg" title=""></a>
+            <a href="cars2017.html"><img src="src/img/gallery/img1.jpg"  /></a>
+            <a href="cars2015.html"><b data-src="src/img/gallery/img2.jpg"></b></a>
+            <a href="cars2013.html"><b data-src="src/img/gallery/img3.jpg"></b></a>
+             <a href="cars2011.html"><img src="src/img/gallery/img4.jpg"  /></a>
         </div>
         <!--thumbnails-->
         <div id="thumbs">
