--- a/new/about.html
+++ b/new/about.html
@@ -78,7 +78,7 @@
 		        <ul class="nav navbar-nav navbar-right headerLink">
 			        <li><a href="index.html">HOME</a></li>
 			        <li class="active"><a href="about.html">ABOUT US</a></li>
-			        <li><a href="project.html">OUR PROJECT</a></li>
+			        <li><a href="project.html">CARS</a></li>
 			        <li><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li><a href="sponsors.html">SPONSORS</a></li>
