--- a/new/sponsors.html
+++ b/new/sponsors.html
@@ -20,7 +20,7 @@
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
 	    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 	    <script src="src/js/bootstrap.min.js"></script>
-	    <link href="src/css/index10.css" rel="stylesheet">
+	    <link href="src/css/index12.css" rel="stylesheet">
 	    <!-- <link href="src/css/indexTab.css" rel="stylesheet"> -->
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
 	</head>
@@ -62,7 +62,7 @@
 		        <ul class="nav navbar-nav navbar-right headerLink ">
 			        <li><a href="index.html">HOME</a></li>
 			        <li><a href="about.html">ABOUT US</a></li>
-			        <li><a href="project.html">OUR PROJECT</a></li>
+			        <li><a href="project.html">CARS</a></li>
 			        <li><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li  class="active"><a href="sponsors.html">SPONSORS</a></li>
@@ -134,7 +134,7 @@
 		    	<div role="tabpanel" class="tab-pane" id="old">	
 		    		<div class="row" style="margin-top: 5vh;margin-bottom: 15vh">
 						<div class="col-sm-11 col-sm-offset-1">
-							<h1  class="goldspons">GOLD SPONSORS</h1>
+							<p  class="goldspons">GOLD SPONSORS</p>
 							<div class="row">
 								<div class="col-sm-3">
 									<div class="hover08 column">
@@ -166,7 +166,7 @@
 								</div>
 							</div>
 
-							<h1 class="goldspons">SILVER SPONSORS</h1>
+							<h1 class="silverspons">SILVER SPONSORS</h1>
 							<div class="row">
 								<div class="col-sm-3">
 									<div class="hover08 column">
@@ -198,7 +198,7 @@
 								</div>
 							</div>
 
-							<h1 class="goldspons">BRONZE SPONSORS</h1>
+							<h1 class="silverspons">BRONZE SPONSORS</h1>
 							<div class="row">
 								<div class="col-sm-3">
 									<div class="hover08 column">
