minor changes in about us

--- a/new/about.html
+++ b/new/about.html
@@ -78,7 +78,7 @@
 		        <ul class="nav navbar-nav navbar-right headerLink">
 			        <li><a href="index.html">HOME</a></li>
 			        <li class="active"><a href="about.html">ABOUT US</a></li>
-			        <li><a href="project.html">OUR PROJECT</a></li>
+			        <li><a href="project.html">CARS</a></li>
 			        <li><a href="team.html">TEAM</a></li>
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li><a href="sponsors.html">SPONSORS</a></li>
@@ -125,6 +125,14 @@ These competitions present students with the unique opportunity to develop their
 					</p>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-sm-7">
+					<h1 class="competitio col-sm-7" >THE COMPETITION</h1>
+					<p class="compdetails">Formula Student requires designing, developing and fabricating a formula style open-wheeled race car which then further needs to be sold to a hypothetical Firm thus considering the business and marketing aspects of the car and the entire project too. The entire process is completed by the students only. The competition consists of static and dynamic events which not only judges the car on the design and engineering basis but also on the business aspects of the projects. These competitions present students with the unique opportunity to develop their skills in technical designing, manufacturing, research work, team management, communication and business operations such as budgeting and market research in a real-world environment. The unique combination of real-world pressures to meet the deadlines, to design and fabricate a formula-style race car and to make it compete at the international level requires a great deal of skills and helps the students build an overall personality while working under a great deal of pressure. These skills are very important in the current corporate world and hence the formula students are highly sought after across the corporate sectors especially in engineering mobility industry.</p>
+				</div>
+				<div class="col-sm-5">
+				</div>
+			</div>	
 		</div>
 		<footer class="footer" id="contact">
 			<div class="container-fluid">
