update home page, gallery 1

--- a/new/index.html
+++ b/new/index.html
@@ -62,14 +62,14 @@
 	
 	<div id="sliderFrame">
         <div id="slider">
-            <img src="src/img/gallery/img1.jpg" />
+            <img src="src/img/gallery/img1.jpg" class="img-fluid" />
             <img src="src/img/gallery/img2.jpg" />
             <img src="src/img/gallery/img3.jpg" />
             <img src="src/img/gallery/img4.jpg" />
         </div>
         <!-- <div class="group1-Wrapper">
             <a onclick="imageSlider.previous()" class="group1-Prev"></a>
-            <a onclick="imageSlider.next()" class="group1-Next"></a>
+            <a onclick="imageSlider.next()" class="group1-Next"></a>n
         </div>
         <div style="text-align:center;padding:20px;z-index:20;">
             <a onclick="imageSlider.previous()" class="group2-Prev"></a>
@@ -127,21 +127,28 @@
 			</div>
 			<div class="row borderLine" >
 				<div class="col-sm-4 col-sm-offset-4 readMoreMainButton navbarAnimate ">
-					<a> READ MORE</a>
+					<a href="about.html"> READ MORE</a>
 				</div>
 			</div>
 			<div class="row eventDiv borderLine">
 				<div class="col-sm-6 rightBorder eventPad">
-					<p class="eventHeading navbarAnimate">UPCOMING EVENTS</p>
+					<p class="eventHeading navbarAnimate">TEAM UPDATES</p>
 					<p class="eventContent eventContentHeading navbarAnimate" >FS Germany 2018 </p>
 					<p class="eventContent navbarAnimate text-justify">As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.</p>
 
 				</div>
-				<div class="col-sm-6 eventPad ">
+				<!--<div class="col-sm-6 eventPad ">
 					<p class="eventHeading navbarAnimate">TEAM UPDATES</p>
 					<p class="eventContent eventHeading2 navbarAnimate text-justify">Passive Battery Managment System(BMS) design has been completed. PCB is ready to be sent for Fabrication.</p>
 
-				</div>
+				</div>-->
+
+				<div class="col-sm-6 eventPad">
+                <section class="wow fadeInRight col-lg-12 animated" style="padding-bottom: 20px; visibility: visible; animation-name: fadeInRight;" data-wow-animation-name="fadeInRight">
+                    <iframe width="100%" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fiitrms.in%2F%3Ffref%3Dts&amp;tabs=timeline&amp;width=500&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
+                </section>
+            </div>
+
 			</div>
 		</div>
 
